CHE-7139: Fix redraw selection on horizontal scroll. (#8355)
* Fix format.


* Begin rework dom to implement new background behaviour.


* mend

* Fix scroll Side effects and style typo.

* Clean up

--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/smartTree/TreeStyles.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/smartTree/TreeStyles.css
@@ -122,12 +122,17 @@
 }
 
 .tree {
-    display: inline-block;
-    min-width: 100%;
     font-size: 0.85em;
     outline: none;
     overflow-y: auto;
     padding-bottom: 2px;
+}
+
+.contentTree {
+  min-width: 100%;
+  position: absolute;
+  overflow: hidden;
+  left: 0;
 }
 
 .tree:focus {
